# pointcloud_to_rangeimage

./: CMakeLists.txt  README.md  package.xml
cfg/: RangeImage.cfg
config/: velodyne16.yaml  velodyne64.yaml
include/pointcloud_to_rangeimage/: utils.h
launch/: pointcloud_to_rangeimage.launch  rangeimage_to_pointlcoud.launch
msg/: RangeImage.msg  RangeImageHeader.msg
src/: pointcloud_to_rangeimage_node.cpp  rangeimage_to_pointcloud_node.cpp
